[package]
name = "swook"
version = "1.0.0"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zenria/swook"
description = "Send slack message with slack webhook api"
keywords = ["slack", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3"
anyhow="1"
slack-hook3 = "0.11"
native-tls  = { version = "0.2", features = ["vendored"] }
tokio={version="1.2", features=["rt-multi-thread", "rt", "macros"]}
dotenv="0.15"
envy="0.4"
serde={version="1.0", features=["derive"]}
