[package]
name = "swook"
version = "1.2.1"
authors = ["Philippe GASSMANN <philoops@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/zenria/swook"
description = "Send slack message with slack webhook api"
keywords = ["slack", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
slack-hook3 = "0.11"
native-tls = { version = "0.2", features = ["vendored"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros"] }
dotenvy = "0.15"
